Use Unsafe instead of VarHandle's